bin_PROGRAMS = hamip
hamip_SOURCES = src/hamip.cpp src/packet.h src/Packetizer.cpp src/Packetizer.h src/Depacketizer.cpp src/Depacketizer.h src/TunInterface.cpp src/TunInterface.h
AM_CPPFLAGS = $(BOOST_CPPFLAGS)
AM_LDFLAGS = $(BOOST_LDFLAGS)

ACLOCAL_AMFLAGS = -I m4 -I build-aux --install
EXTRA_DIST = m4/NOTES


